# sphinx-revealjs-demo

./: .gitignore  Makefile  README.md  conf.py  index.rst  pyproject.toml
.github/workflows/: deploy.yml
_static/: slides.css
doctrees/: environment.pickle  index.doctree
html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
html/_static/: documentation_options.js
revealjs/: .buildinfo  genindex.html  index.html  search.html
revealjs/_sources/: index.rst.txt
revealjs/_static/: documentation_options.js
